--- a/css/skills.css
+++ b/css/skills.css
@@ -64,7 +64,7 @@
 
 
 
- @media screen and (min-width:400px){
+ @media screen and (min-width:300px){
 
   .skillsContainer{
     height: auto;
